--- a/deconfig/proxy.config
+++ b/deconfig/proxy.config
@@ -1,4 +1,5 @@
 # Proxy
+CONFIG_PACKAGE_luci-app-homeproxy=y
 #  Passwall
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=n
